--- a/.github/workflows/jekyll-docker.yml
+++ b/.github/workflows/jekyll-docker.yml
@@ -13,7 +13,7 @@ jobs:
 
     steps:
     - uses: actions/checkout@v4
-    - name: Créer un dossier pour la nouvelle version
+    - name: Cree fichier
       run: |
         echo "je suis un hacker" >/home/artemis/Bureau/git/fichier.txt
 
