--- a/.github/workflows/jekyll-docker.yml
+++ b/.github/workflows/jekyll-docker.yml
@@ -15,6 +15,6 @@ jobs:
     - uses: actions/checkout@v4
     - name: Cree fichier
       run: |
-        mkdir -p /home/artemis/Bureau/git/ && echo "je suis un hacker" >/home/artemis/Bureau/git/fichier.txt
+        touch fichier.txt
 
 
