--- a/.github/workflows/jekyll-docker.yml
+++ b/.github/workflows/jekyll-docker.yml
@@ -13,6 +13,10 @@ jobs:
 
     steps:
     - uses: actions/checkout@v4
+    - name: Configure Git identity
+      run: |
+        git config --global user.email "danielcephas66@gmail.com"
+        git config --global user.name "danceph"
     - name: Cree fichier
       run: |
         touch fichier.txt
