--- a/.github/workflows/jekyll-docker.yml
+++ b/.github/workflows/jekyll-docker.yml
@@ -13,13 +13,11 @@ jobs:
 
     steps:
     - uses: actions/checkout@v4
-    - name: Configure Git identity
-      run: |
-        git config --global user.email "danielcephas66@gmail.com"
-        git config --global user.name "danceph"
     - name: Cree fichier
       run: |
         touch fichier.txt
         git add fichier.txt
         git commit -m "Ajout de fichier.txt"
-        git push
+        git push https://github.com/${{ github.repository }}.git HEAD:${{ github.ref }}
+      env:
+        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
