--- a/.github/workflows/jekyll-docker.yml
+++ b/.github/workflows/jekyll-docker.yml
@@ -13,6 +13,10 @@ jobs:
 
     steps:
     - uses: actions/checkout@v4
-    - name: Cree fichier
+    - name: Cree dossier et fichier
       run: |
-        touch fichier.txt
+        mkdir nouveau_dossier
+        touch nouveau_dossier/fichier.txt
+        git add nouveau_dossier/fichier.txt
+        git commit -m "Ajout de nouveau_dossier/fichier.txt"
+        git push
