--- a/.github/workflows/jekyll-docker.yml
+++ b/.github/workflows/jekyll-docker.yml
@@ -22,4 +22,4 @@ jobs:
         echo "Mon fichier bien fait" > readme.txt
         git add .
         git commit -m "readme"
-        git push -u origin progistack
+        git push
