--- a/.github/workflows/jekyll-docker.yml
+++ b/.github/workflows/jekyll-docker.yml
@@ -19,8 +19,7 @@ jobs:
         git config --global user.name "danceph"
     - name: Cree fichier
       run: |
-        mkdir cephas
-        echo "Succes lors de la creation " > cephas/cephas.md
+        echo "Succes lors de la creation " > cephas.txt
         git add .
         git commit -m "readme"
         git push
