--- a/.github/workflows/jekyll-docker.yml
+++ b/.github/workflows/jekyll-docker.yml
@@ -19,12 +19,12 @@ jobs:
         git config --global user.name "danceph"
     - name: Supprimer les anciens fichiers
       run: |
-        rm -rf KEEN/*
+        rm -rf PROGISTACK/*
     - name: Cree fichier
       run: |
-        cp $GITHUB_WORKSPACE/index.html KEEN/
-        cp $GITHUB_WORKSPACE/style.css KEEN/
-        zip -r KEEN.zip KEEN/
+        cp $GITHUB_WORKSPACE/index.html PROGISTACK /
+        cp $GITHUB_WORKSPACE/style.css PROGISTACK/
+        zip -r PROGISTACK.zip PROGISTACK/
         git add .
-        git commit -m "Mettre à jour les fichiers index.html et style.css"
+        git commit -m "Nouvelle mise a jour"
         git push
