--- a/.github/workflows/jekyll-docker.yml
+++ b/.github/workflows/jekyll-docker.yml
@@ -22,6 +22,7 @@ jobs:
         rm -rf PROGISTACK/*
     - name: Cree fichier
       run: |
+        mkdir PROGISTACK
         cp $GITHUB_WORKSPACE/index.html PROGISTACK /
         cp $GITHUB_WORKSPACE/style.css PROGISTACK/
         zip -r PROGISTACK.zip PROGISTACK/
