--- a/.github/workflows/jekyll-docker.yml
+++ b/.github/workflows/jekyll-docker.yml
@@ -1,3 +1,4 @@
+
 name: zip dossier
 
 on:
@@ -19,13 +20,12 @@ jobs:
         git config --global user.name "danceph"
     - name: Supprimer les anciens fichiers
       run: |
-        rm -rf PROGISTACK/*
+        rm -rf KEEN/*
     - name: Cree fichier
       run: |
-        mkdir PROGISTACK
-        cp  $GITHUB_WORKSPACE/index.html PROGISTACK /
-        cp  $GITHUB_WORKSPACE/style.css PROGISTACK/
-        zip -r PROGISTACK.zip PROGISTACK/
+        cp $GITHUB_WORKSPACE/index.html KEEN/
+        cp $GITHUB_WORKSPACE/style.css KEEN/
+        zip -r KEEN.zip KEEN/
         git add .
-        git commit -m "Nouvelle mise a jour"
+        git commit -m "Mettre à jour les fichiers index.html et style.css"
         git push
